Modified else if statements in ArtistDAO.java and TrackDAO.java for the save method. Changed method names in TrackDataService.java and added equalsIgnoreCase.